--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <main class="container">
         <header class="profile-header">
-            <img src="https://www.theglobeandmail.com/resizer/v2/W3KOR5H2VRA5VN6UCO2I6FRPBM.JPG?auth=763116819a77864f1469be432e185f403c94df56860473852077e6f85f1c5c16&width=800&quality=80" alt="James Keller" class="profile-img">
+            <img src="profile.png" alt="James Keller" class="profile-img">
             <h1>James Keller</h1>
             <p class="subtitle">Editor at The Globe and Mail</p>
         </header>
@@ -21,7 +21,7 @@
         <section class="bio">
             <p>
                 Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, covering national news and politics. 
-                I have a deep interest in the intersection of visual storytelling and technology.
+                I have a deep interest in the intersection of visual storytelling and technology, often seen through the lens of a Fujifilm camera.
             </p>
         </section>
 
