--- a/index.html
+++ b/index.html
@@ -7,27 +7,41 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <main class="container">
-        <header class="profile-header">
-            <img src="profile.png" alt="James Keller" class="profile-img">
-            <h1>James Keller</h1>
-            <p class="subtitle">Editor at The Globe and Mail</p>
+        <header class="profile-section">
+            <div class="profile-image-container">
+                <img src="profile.png" alt="James Keller" class="profile-img">
+            </div>
+            <div class="profile-text">
+                <h1>James Keller</h1>
+                <p class="subtitle">Editor at The Globe and Mail</p>
+            </div>
         </header>
 
-        <section class="bio">
-            <p>Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, covering national news and politics.</p>
-        </section>
-
-        <section class="links">
-            <div class="link-grid">
-                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" class="link-card">Read my work at The Globe</a>
-                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" class="link-card">Connect on LinkedIn</a>
+        <section class="content">
+            <div class="bio">
+                <p>
+                    Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, covering national news and politics. 
+                    I have a deep interest in the intersection of visual storytelling and technology, often seen through the lens of a Fujifilm camera.
+                </p>
             </div>
+
+            <nav class="links">
+                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" class="link-card">The Globe and Mail</a>
+                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" class="link-card">LinkedIn</a>
+                <a href="https://twitter.com/byjameskeller" target="_blank" class="link-card">Twitter / X</a>
+                <a href="#" class="link-card secondary">Photography Portfolio</a>
+            </nav>
         </section>
     </main>
-    <footer><p>&copy; 2026 James Keller</p></footer>
+
+    <footer>
+        <p>&copy; 2026 James Keller</p>
+    </footer>
+
 </body>
 </html>
