--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James Keller | Editor & Photographer</title>
-    <link rel="stylesheet" href="style.css">
+    <title>James Keller | Editor</title>
+    <link rel="stylesheet" href="style.css?v=3">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
@@ -25,8 +25,7 @@
         <section class="content">
             <div class="bio">
                 <p>
-                    Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, covering national news and politics. 
-                    I have a deep interest in the intersection of visual storytelling and technology, often seen through the lens of a Fujifilm camera.
+                    Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, covering national news, politics, and investigative reporting. 
                 </p>
             </div>
 
@@ -34,7 +33,6 @@
                 <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" class="link-card">The Globe and Mail</a>
                 <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" class="link-card">LinkedIn</a>
                 <a href="https://twitter.com/byjameskeller" target="_blank" class="link-card">Twitter / X</a>
-                <a href="#" class="link-card secondary">Photography Portfolio</a>
             </nav>
         </section>
     </main>
