--- a/index.html
+++ b/index.html
@@ -4,42 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Keller | Editor</title>
-    <link rel="stylesheet" href="style.css?v=3">
+    <link rel="stylesheet" href="style.css?v=4">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Playfair+Display:ital,wght@0,900;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <main class="container">
-        <header class="profile-section">
-            <div class="profile-image-container">
-                <img src="profile.png" alt="James Keller" class="profile-img">
-            </div>
-            <div class="profile-text">
-                <h1>James Keller</h1>
-                <p class="subtitle">Editor at The Globe and Mail</p>
+    <div class="main-layout">
+        <header class="sidebar">
+            <div class="sticky-content">
+                <h1 class="hero-name">James<br>Keller</h1>
+                <p class="hero-title">Editor at The Globe and Mail</p>
+                <div class="image-wrapper">
+                    <img src="profile.png" alt="James Keller" class="profile-img">
+                </div>
             </div>
         </header>
 
-        <section class="content">
-            <div class="bio">
-                <p>
-                    Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, covering national news, politics, and investigative reporting. 
-                </p>
+        <section class="content-area">
+            <div class="bio-text">
+                <p>Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, where I oversee coverage of national news, politics, and investigative reporting.</p>
             </div>
 
-            <nav class="links">
-                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" class="link-card">The Globe and Mail</a>
-                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" class="link-card">LinkedIn</a>
-                <a href="https://twitter.com/byjameskeller" target="_blank" class="link-card">Twitter / X</a>
+            <nav class="social-nav">
+                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank">The Globe and Mail</a>
+                <a href="https://twitter.com/byjameskeller" target="_blank">Twitter / X</a>
+                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank">LinkedIn</a>
             </nav>
-        </section>
-    </main>
 
-    <footer>
-        <p>&copy; 2026 James Keller</p>
-    </footer>
+            <footer>
+                <p>&copy; 2026 James Keller</p>
+            </footer>
+        </section>
+    </div>
 
 </body>
 </html>
