--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>James Keller | Editor</title>
-    <link rel="stylesheet" href="style.css?v=5">
+    <link rel="stylesheet" href="style.css?v=6">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
 
@@ -27,10 +28,10 @@
                 <p>Based in Canada, I am an editor at <strong>The Globe and Mail</strong>, where I oversee coverage of national news, politics, and investigative reporting.</p>
             </div>
 
-            <nav class="social-nav">
-                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank">The Globe and Mail</a>
-                <a href="https://twitter.com/byjameskeller" target="_blank">Twitter / X</a>
-                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank">LinkedIn</a>
+            <nav class="social-icons">
+                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail"><i class="fa-solid fa-globe"></i></a>
+                <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
             </nav>
 
             <footer>
