--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <meta property="og:title" content="James Keller | Editor at The Globe and Mail">
+<meta property="og:description" content="National news, politics, and investigative reporting.">
+<meta property="og:image" content="profile.png">
+<meta property="og:url" content="https://jameskeller.ca">
+<meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
 
