--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
             </div>
 
             <nav class="social-icons">
-                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail" class="globe-leaf">
-                    <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 22l-1-4c-1.5-2-4-1.5-5.5-.5-.5.3-1 .8-1.5.8s-.8-.5-.5-1c.5-1 2-2 3.5-2.5 1-.3 2.5-.3 3.5.5 1 .8 1 2 1 3.5l-1 3.2zM8 14c-1.5-1-4-1-5.5.5-.4.4-.8.4-1.2 0-.3-.3-.3-.8 0-1.2 1.5-1.5 4-2 6-.5 1 1 1.5 2.5.7 1.2zm10-2c2-1.5 2-4 .5-5.5-.4-.4-.4-.8 0-1.2.3-.3.8-.3 1.2 0 1.5 1.5 2 4 .5 6-1 1-2.5 1.5-2.2.7zM12 8c0-2-1.5-4.5-3.5-5.5-.4-.2-.5-.7-.3-1.1.2-.4.7-.5 1.1-.3 2.5 1.5 4.5 4.5 4.5 7 0 1.5-.5 3-1.8 2.5-1.3-.5-1.3-1.5-1.3-2.6zM16 14c1.5 1 4 1 5.5-.5.4-.4.8-.4 1.2 0 .3.3.3.8 0 1.2-1.5 1.5-4 2-6 .5-1-1-1.5-2.5-.7-1.2z" />
-                    </svg>
-                </a>
-                <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-            </nav>
+    <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail" class="globe-leaf">
+        <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+            <path d="M471.2 316.5c-30.8-21.8-63.5-38.3-95.2-52.4 12.5-31.9 31.7-61.9 57.3-88.8 6.5-6.8 6.4-17.6-.2-24.3-6.6-6.7-17.4-6.8-24.1-.3-40.4 39.4-67.4 86.6-79.6 137.9-18.7-1.4-37.5-1.9-56.3-.3-1.6-43.9 13.9-87.3 43.1-120.4 7-8 6.1-20.2-2-27.2s-20.2-6.1-27.2 2c-39.7 45.4-58.4 105.7-52.6 166.7-27.1 13.1-52.6 28.5-74.8 46.5-10 8.1-11.4 22.8-3.4 32.8 8.1 10 22.8 11.4 32.8 3.4 24.3-19.6 52.5-35.8 82.7-48.4-1.2 16.2-1.3 32.3-.3 48.5l-21.7 86.8c-2.3 9.4 3.5 19 12.9 21.3s19-3.5 21.3-12.9l19.9-79.6c1.3 0 2.6-.1 3.9-.1 1.3 0 2.5.1 3.8.1l19.9 79.6c2.3 9.4 11.9 15.2 21.3 12.9s15.2-11.9 12.9-21.3l-21.7-86.8c1-16.1.9-32.3-.3-48.5 30.1 12.6 58.4 28.8 82.7 48.4 10.1 8.1 24.8 6.6 32.8-3.4 8.1-10 6.7-24.7-3.4-32.8z"/>
+        </svg>
+    </a>
+    <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+</nav>
+            
         </section>
     </div>
 
