--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James Keller | Edito.r</title>
+    <title>James Keller | Editor</title>
     
     <meta property="og:title" content="James Keller | Editor at The Globe and Mail">
     <meta property="og:description" content="National news, politics, and investigative reporting.">
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://jameskeller.ca">
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="stylesheet" href="style.css?v=10">
+    <link rel="stylesheet" href="style.css?v=15">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap" rel="stylesheet">
@@ -36,15 +36,14 @@
             </div>
 
             <nav class="social-icons">
-    <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail" class="globe-leaf">
-        <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
-            <path d="M471.2 316.5c-30.8-21.8-63.5-38.3-95.2-52.4 12.5-31.9 31.7-61.9 57.3-88.8 6.5-6.8 6.4-17.6-.2-24.3-6.6-6.7-17.4-6.8-24.1-.3-40.4 39.4-67.4 86.6-79.6 137.9-18.7-1.4-37.5-1.9-56.3-.3-1.6-43.9 13.9-87.3 43.1-120.4 7-8 6.1-20.2-2-27.2s-20.2-6.1-27.2 2c-39.7 45.4-58.4 105.7-52.6 166.7-27.1 13.1-52.6 28.5-74.8 46.5-10 8.1-11.4 22.8-3.4 32.8 8.1 10 22.8 11.4 32.8 3.4 24.3-19.6 52.5-35.8 82.7-48.4-1.2 16.2-1.3 32.3-.3 48.5l-21.7 86.8c-2.3 9.4 3.5 19 12.9 21.3s19-3.5 21.3-12.9l19.9-79.6c1.3 0 2.6-.1 3.9-.1 1.3 0 2.5.1 3.8.1l19.9 79.6c2.3 9.4 11.9 15.2 21.3 12.9s15.2-11.9 12.9-21.3l-21.7-86.8c1-16.1.9-32.3-.3-48.5 30.1 12.6 58.4 28.8 82.7 48.4 10.1 8.1 24.8 6.6 32.8-3.4 8.1-10 6.7-24.7-3.4-32.8z"/>
-        </svg>
-    </a>
-    <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
-    <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-</nav>
-            
+                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail" class="globe-leaf">
+                    <svg viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M12.4 21.6s-.2-1.5-.2-2.2c-.1-1-.4-1.9-.9-2.7-.2-.4-.6-.8-1-1.2-.4-.3-.8-.6-1.3-.7-.5-.2-1.1-.3-1.7-.2-.6 0-1.1.1-1.6.4-.5.2-.9.5-1.2.9-.3.3-.5.7-.6 1.2s0 .6 0 .9c.1.3.2.6.3.9.2.5.6.9 1 1.3.1.1.2.3.2.5s-.2.3-.3.4c-.2.1-.5.1-.7.1-.2 0-.5-.1-.6-.3-.7-.5-1.2-1.3-1.5-2.1-.2-.5-.3-1-.2-1.5.1-.5.2-1 .4-1.5.4-.8 1.1-1.4 1.9-1.8.5-.2 1-.4 1.5-.4s1 .1 1.5.1c.5.1 1 .4 1.4.7.4.3.7.6.9 1 .2.4.4.7.5 1.1.1.4.1.8 0 1.2-.1.4-.2.7-.3 1.1l.5.6c.1.1.3.2.5.2s.4-.1.5-.3c.4-.6.7-1.3.8-2 .1-.4.1-.8 0-1.2-.1-.4-.2-.8-.4-1.1-.3-.5-.7-1-1.3-1.3-.4-.3-.9-.4-1.4-.5-.4-.1-.8-.1-1.2 0-.3.1-.7.2-1 .3l-.5-.1c-.1-.2-.1-.3-.1-.5s.1-.3.2-.4c.2-.3.5-.6.9-.9s.7-.4 1.1-.6c.5-.2 1.1-.2 1.6-.2.5 0 1.1.2 1.6.4.4.2.8.5 1.1.8s.5.7.7 1.1c.2.4.2.8.3 1.2 0 .4-.1.8-.2 1.2l.5.5c.1.2.3.2.5.2s.4-.1.4-.3c.3-.5.4-1.1.5-1.7v-1.8c-.2-.7-.5-1.3-1-1.9s-.8-.8-1.3-1.1c-.4-.2-.9-.4-1.3-.5s-.9-.1-1.4 0c-.4.1-.7.2-1.1.3h-.5c-.1-.2-.1-.3-.1-.5s.1-.3.2-.4c.3-.4.8-.8 1.2-1.1.5-.3 1-.5 1.5-.6.7-.1 1.4-.1 2.1 0 .7.1 1.4.4 1.9.8.5.4.9.8 1.2 1.3.3.5.5 1 .5 1.6s0 1.1-.1 1.7c-.1.5-.4 1.1-.7 1.5l.4.4s.3.2.5.2.3-.1.4-.3c.8-.5 1.4-1.2 1.8-2.1.3-.7.5-1.4.5-2.2v-2.1c-.4-.6-.9-1.2-1.6-1.5-.5-.3-1.2-.5-1.8-.6s-1.3-.1-1.9.1c-.5.1-1 .3-1.5.6h-.5l-.3-.4v-.4c.2-.2.4-.4.8-.6.5-.3 1.1-.5 1.7-.6s1.3-.1 2 .1c.9.2 1.7.6 2.4 1.1.6.5 1.1 1.1 1.4 1.8.3.7.5 1.4.5 2.1 0 .7-.1 1.4-.4 2.1-.3.6-.7 1.2-1.2 1.6l.3.4c.2.1.3.2.3.4s-.1.3-.3.4l-.5-.1c-.5-.4-.9-.8-1.2-1.3s-.5-1-.6-1.5v-1.6l-.4-1.6c-.3-.8-.9-1.6-1.6-2.2-.6-.5-1.2-.9-2-1.1s-1.2-.3-1.9-.2-1.3.1-1.8.4c-.5.2-.9.4-1.3.7l-.5-.1s-.3-.2-.3-.4c0-.2.1-.3.2-.4.4-.3.9-.5 1.4-.6.5-.1 1-.1 1.5 0 .6.1 1.2.4 1.7.7.5.4 1 1 1.3 1.6.3.6.4 1.3.4 2s-.2 1.3-.5 2l-.4.4s-.2.3-.2.4.1.3.3.4l.5-.1c.7-.6 1.3-1.4 1.7-2.2s.5-1.4.5-2.2c0-.7-.2-1.5-.5-2.1s-.8-1.2-1.4-1.6-1.2-.6-1.9-.8-1.4-.2-2.1-.1c-.6.1-1.2.4-1.7.7l-.5-.1c-.3-.2-.3-.4-.3-.6s.1-.3.2-.4c.4-.2.9-.4 1.4-.5s1-.1 1.4 0c.6 0 1.2.2 1.8.5s1 .6 1.3 1c.3.4.6.9.8 1.4.2.5.2 1 .2 1.5s-.2 1-.4 1.4c-.2.4-.5.8-.8 1.1l.3.4s.3.2.5.2c.2 0 .4-.1.5-.3.6-.5 1-1.1 1.3-1.7.2-.5.4-1.1.4-1.7s-.1-1.1-.2-1.7c-.2-.5-.4-1-.8-1.5s-.8-.8-1.3-1c-.4-.2-.9-.3-1.3-.4-.4-.1-.8-.1-1.1 0z"/>
+                    </svg>
+                </a>
+                <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
+            </nav>
         </section>
     </div>
 
