--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James Keller | National Editor</title>
+    <title>James Keller | Journalist</title>
     
     <meta property="og:title" content="James Keller | National Editor at The Globe and Mail">
     <meta property="og:description" content="National news, politics, and investigative reporting.">
