--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <nav class="social-icons">
                 <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail"><i class="fa-solid fa-globe"></i></a>
+                <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail"><i class="fa-brands fa-canadian-maple-leaf"></i></a>
                 <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
             </nav>
         </section>
