--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <a href="https://www.linkedin.com/in/byjameskeller/" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://www.theglobeandmail.com/authors/james-keller/" target="_blank" title="The Globe and Mail">
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="100%" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
-<path fill="#000000" opacity="1.000000" stroke="none" 
+	 width="1em" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+<path fill="currentColor" opacity="1.000000" stroke="none" 
 	d="
 M113.151779,228.710678 
 	C106.453079,218.598816 107.746490,215.640961 119.775421,213.855972 
