--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section class="content-area">
             <div class="bio-text">
-                <p>I am the <strong>National Editor</strong> at <strong>The Globe and Mail</strong>, where I oversee coverage of national news, politics, and investigative reporting.</p>
+                <p>I am the <strong>National Editor</strong> at <strong>The Globe and Mail</strong>, based in Toronto, where I oversee coverage of national news, politics, and investigative reporting.</p>
             </div>
 
             <nav class="social-icons">
