--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
     <meta property="og:title" content="James Keller | National Editor at The Globe and Mail">
     <meta property="og:description" content="National news, politics, and investigative reporting.">
-    <meta property="og:image" content="profile.png">
+    <meta property="og:image" content="profile2.jpg">
     <meta property="og:url" content="https://jameskeller.ca">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -25,7 +25,7 @@
                 <h1 class="hero-name">James<br>Keller</h1>
                 <p class="hero-title">National Editor at The Globe and Mail</p>
                 <div class="image-wrapper">
-                    <img src="profile.png" alt="James Keller" class="profile-img">
+                    <img src="profile2.jpg" alt="James Keller" class="profile-img">
                 </div>
             </div>
         </header>
