--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
         <section class="content-area">
             <div class="bio-text">
                 <p>I am the <strong>National Editor</strong> at <strong>The Globe and Mail</strong>, based in Toronto, where I oversee coverage of national news, politics, and investigative reporting.</p>
+
+
+<div class="bio-text">
+    <p>I am the <strong>National Editor</strong> at <strong>The Globe and Mail</strong>, based in Toronto, where I oversee coverage of national news, politics, and investigations.</p>
+    <p>I have also worked as the Globe's Alberta Bureau Chief and B.C. Assistant Editor. Before that, I reported for The Canadian Press in Halifax and Vancouver. Over the course of my career, my coverage has spanned everything from high-profile court cases and provincial budgets to the widespread impacts of the COVID-19 pandemic across Western Canada.</p>
+</div>
+
+				
             </div>
 
             <nav class="social-icons">
