--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ M113.151779,228.710678
 	C122.256721,238.918030 117.869102,233.905045 113.151779,228.710678 
 z"/>
 </svg></a>
-                <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a>
+              <!--  <a href="https://twitter.com/byjameskeller" target="_blank" title="Twitter / X"><i class="fa-brands fa-x-twitter"></i></a> -->
             </nav>
         </section>
     </div>
