--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="content-area">
            <div class="bio-text">
     <p>I am the <strong>National Editor</strong> at <strong>The Globe and Mail</strong>, based in Toronto, where I oversee coverage of national news, politics, and investigations.</p>
-    <p>I have also worked as The Globe's Alberta Bureau Chief and B.C. Assistant Editor. Before that, I reported for The Canadian Press, first in Halifax and then in Vancouver.</p>
+   <!-- <p>I have also worked as The Globe's Alberta Bureau Chief and B.C. Assistant Editor. Before that, I reported for The Canadian Press, first in Halifax and then in Vancouver.</p> --> 
 </div>
 
             <nav class="social-icons">
