--- a/tools/index.html
+++ b/tools/index.html
@@ -117,30 +117,16 @@
 <body>
 
     <header>
-        <h1>My Web App Portfolio 🚀</h1>
-        <p>A collection of tools, utilities, and applications I've built. Feel free to click around and test them out!</p>
-    </header>
+        <h1>Appz 🚀</h1>
+        </header>
 
     <div class="app-grid">
         
         <div class="app-card">
             <div class="app-icon">🍳</div>
-            <h2 class="app-title">Ultimate Pantry Cook</h2>
-            <p class="app-desc">A smart recipe finder that filters by the exact ingredients you have on hand. Includes a dynamic shopping list, macro tracking, and dark mode.</p>
+            <h2 class="app-title">Recipes</h2>
             
-            <a href="pantry.html" class="launch-btn">Launch App</a>
-        </div>
-
-        <div class="app-card coming-soon">
-            <div class="app-icon">💡</div>
-            <h2 class="app-title">Project #2</h2>
-            <p class="app-desc">Currently brainstorming the next big thing. Check back soon!</p>
-        </div>
-
-        <div class="app-card coming-soon">
-            <div class="app-icon">🛠️</div>
-            <h2 class="app-title">Project #3</h2>
-            <p class="app-desc">More awesome tools in the pipeline.</p>
+            <a href="recipe.html" class="launch-btn">Recipe</a>
         </div>
 
     </div>
