--- a/tools/index.html
+++ b/tools/index.html
@@ -123,10 +123,7 @@
     <div class="app-grid">
         
         <div class="app-card">
-            <div class="app-icon">🍳</div>
-            <h2 class="app-title">Recipes</h2>
-            
-            <a href="recipe.html" class="launch-btn">Recipe</a>
+            <a href="recipe.html" class="launch-btn"><h2 class="app-title">🍳 Recipes</h2></a>
         </div>
 
     </div>
