--- a/tools/index.html
+++ b/tools/index.html
@@ -3,130 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Apps</title>
+    <title>Appz 🚀</title>
     <style>
-        :root {
-            --bg-color: #f4f6f8;
-            --text-color: #333;
-            --card-bg: white;
-            --accent-color: #ff4b4b;
-        }
-
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-            max-width: 900px;
-            margin: 0 auto;
-            padding: 40px 20px;
-            background-color: var(--bg-color);
-            color: var(--text-color);
-            line-height: 1.6;
-        }
-
-        header {
-            text-align: center;
-            margin-bottom: 50px;
-        }
-
-        header h1 {
-            font-size: 2.5rem;
-            margin-bottom: 10px;
-        }
-
-        header p {
-            color: #666;
-            font-size: 1.1rem;
+            font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Segoe UI", Roboto, sans-serif;
+            background-color: #f8fafc;
+            color: #1e293b;
             max-width: 600px;
             margin: 0 auto;
+            padding: 60px 20px;
+            text-align: center;
         }
 
-        /* The Grid System */
-        .app-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
+        h2 {
+            font-size: 2.5rem;
+            margin-bottom: 50px;
+            letter-spacing: -0.5px;
         }
 
-        /* App Cards */
-        .app-card {
-            background-color: var(--card-bg);
-            border-radius: 12px;
-            padding: 25px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
-            border: 1px solid #eaeaea;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        .app-list {
             display: flex;
             flex-direction: column;
-        }
-
-        .app-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 15px rgba(0,0,0,0.1);
-        }
-
-        .app-icon {
-            font-size: 2.5rem;
-            margin-bottom: 15px;
-        }
-
-        .app-title {
-            margin: 0 0 10px 0;
-            font-size: 1.4rem;
-        }
-
-        .app-desc {
-            color: #666;
-            margin-bottom: 25px;
-            flex-grow: 1;
-        }
-
-        /* The Launch Button */
-        .launch-btn {
-            display: inline-block;
-            text-align: center;
-            background-color: var(--accent-color);
-            color: white;
-            text-decoration: none;
-            padding: 12px 20px;
-            border-radius: 6px;
-            font-weight: bold;
-            transition: background-color 0.2s;
-        }
-
-        .launch-btn:hover {
-            background-color: #e04343;
-        }
-
-        /* Coming Soon Styling */
-        .coming-soon {
-            border: 2px dashed #ccc;
-            background-color: transparent;
-            box-shadow: none;
-            text-align: center;
-            justify-content: center;
+            gap: 25px;
             align-items: center;
-            color: #999;
-        }
-        
-        .coming-soon:hover {
-            transform: none;
-            box-shadow: none;
         }
 
+        .app-link {
+            text-decoration: none;
+            color: #1e293b;
+            font-size: 1.6rem;
+            font-weight: 600;
+            padding: 10px 20px;
+            transition: opacity 0.2s ease;
+        }
+
+        .app-link:hover {
+            opacity: 0.6;
+        }
     </style>
 </head>
 <body>
 
     <header>
         <h2>Appz 🚀</h2>
-        </header>
+    </header>
 
-    <div class="app-grid">
+    <div class="app-list">
         
-        <div class="app-card">
-            <a href="recipe.html" class="launch-btn"><h3 class="app-title">🍳 Recipes</h3></a>
-        </div>
+        <a href="recipe.html" class="app-link">🍳 Recipes</a>
 
-    </div>
+        </div>
 
 </body>
 </html>
